--- a/public/js.html
+++ b/public/js.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #B602E0;
+            color: white;
+            font-family: baskerville;
+            display: flex;
+            justify-content: center;
+            height: 100vh;
+            align-items: center;
+        }
+
+
+    </style>
 </head>
 <body>
     <h1>Coming soon....</h1>
