--- a/public/RoadMap.html
+++ b/public/RoadMap.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./public/main.css" />
+    <link rel="stylesheet" href="./tutorial.css" />
 </head>
 <body>
     <div class="container">
@@ -33,25 +33,41 @@
         <ul>
             <h3><li>Tags</h3>
                 <ul>
-                    <li>&lt;h1&gt; => &lt;h6&gt;</li>
-                    <li>&lt;p&gt;&lt;/p&gt;</li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li>&lt;h1&gt; => &lt;h6&gt;</li>
+                            <li>&lt;p&gt;&lt;/p&gt;</li>
+                        </div>
+                    </div>
                 </ul>
             </li>
             <h3><li>element</h3>
                 <ul>
-                    <li><pre>&lt;h1&gt;hello&lt;/h1&gt;</pre></li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li><pre>&lt;h1&gt;hello&lt;/h1&gt;</pre></li>
+                        </div>
+                    </div>
                 </ul>
             </li>
             <h3><li>Voids</h3>
                 <ul>
-                    <li>&lt;br /&gt;</li>
-                    <li>&lt;hr /&gt;</li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li>&lt;br /&gt;</li>
+                            <li>&lt;hr /&gt;</li>
+                        </div>
+                    </div>
                 </ul>
             </li>
             <h3><li>Non Voids</h3>
                 <ul>
-                    <li>&lt;h1&gt;&lt;/h1&gt;</li>
-                    <li>&lt;p&gt;&lt;/p&gt;</li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li>&lt;h1&gt;&lt;/h1&gt;</li>
+                            <li>&lt;p&gt;&lt;/p&gt;</li>
+                        </div>
+                    </div>
                 </ul>
             </li>
         </ul>
@@ -62,50 +78,82 @@
         <ol type="i">
             <li><h3>Ordered List</h3>
                 <ol>
-                    <li>&lt;ol&gt;&lt;li&gt;&lt;/li&gt;&lt;/ol&gt;</li>
+                   <div class="code-parents">
+                    <div class="code">
+                        <li>&lt;ol&gt;&lt;li&gt;&lt;/li&gt;&lt;/ol&gt;</li>
+                    </div>
+                   </div>
                 </ol>
             </li>
             <li><h3>Unordered List</h3>
                 <ul>
-                    <li>&lt;ul&gt;&lt;li&gt;&lt;/li&gt;&lt;/ul&gt;</li>
+                   <div class="code-parents">
+                    <div class="code">
+                        <li>&lt;ul&gt;&lt;li&gt;&lt;/li&gt;&lt;/ul&gt;</li>
+                    </div>
+                   </div>
                 </ul>
             </li>
             <li><h3>Anchor Tags</h3>
                 <ul>
-                    <li>&lt;a href="value"&gt; &lt;/a&gt;</li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li>&lt;a href="link-value"&gt; direction &lt;/a&gt;</li>
+                        </div>
+                    </div>
                 </ul>
             </li>
             <li><h3>Image Element</h3>
                 <ul>
-                    <li>&ltimg src="img-url" /&gt</li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li>&lt;img src="img-url" /&gt</li>
+                        </div>
+                    </div>
                 </ul>
             </li>
             <li><h3>Anchor Tags + Image Element</h3>
                 <ul>
-                    <li>&lta href="">&ltimg src="" alt="">&lt/a></li>
+                   <div class="code-parents">
+                    <div class="code">
+                        <li>&lta href="">&lt;img src="" alt="">&lt/a></li>
+                    </div>
+                   </div>
                 </ul>
             </li>
             <li><h3>File Path</h3>
                 <ul>
                     <li>Absolute File Path
                         <ul>
-                            <li>home/user/downloads/document/index.html<br />
-                                (complete path to a file)
-                            </li>
+                            <div class="code-parents">
+                                <div class="code">
+                                    <li>home/user/downloads/document/index.html<br />
+                                        (complete path to a file)
+                                    </li>
+                                </div>
+                            </div>
                         </ul>
                     </li>
                     <li>Relative File Path
                         <ul>
-                            <li>./ (Denotes Current Directory/Folder)</li>
-                            <li>../ (To Navigate To Root Directory/Folder)</li>
+                            <div class="code-parents">
+                                <div class="code">
+                                    <li>./ (Denotes Current Directory/Folder)</li>
+                                    <li>../ (To Navigate To Root Directory/Folder)</li>
+                                </div>
+                            </div>
                         </ul>
                     </li>
                 </ul>
             </li>
             <li><h3>MultiWebPages</h3>
                 <ul>
-                    <li>&lt;a href="./contact.html"&gt;Contact Me&lt;/a&gt</li>
-                    <li>&lt a href="./about.html"&gt;About&lt/a&gt</li>
+                    <div class="code-parents">
+                        <div class="code">
+                            <li>&lt;a href="./contact.html"&gt;Contact Me&lt;/a&gt</li>
+                            <li>&lt a href="./about.html"&gt;About&lt/a&gt</li>
+                        </div>
+                    </div>
                 </ul>
             </li>
             <li><h3>Build a Project</h3>
