--- a/public/RoadMap.html
+++ b/public/RoadMap.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="title">
+        <div class="sections" id="title">
             <h1 >FrontEnd RoadMap</h1>
             <P>References : <a " href="https://developer.mozilla.org/en-US/docs">Mdn Docs</a>,
             <a " href="https://www.w3schools.com/">W3Schools</a>
