--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     </div>
     <hr>
     <div class="routes">
-        <div><a href="./RoadMap.html">HTML ROUTE</a></div>
-        <div><a href="./css.html">CSS ROUTE</a></div>
-       <div> <a href="./js.html">JAVASCRIPT ROUTE</a></div>
+        <div><a href="../public/RoadMap.html">HTML ROUTE</a></div>
+        <div><a href="../public/css.html">CSS ROUTE</a></div>
+       <div> <a href="../public/js.html">JAVASCRIPT ROUTE</a></div>
     </div>
     <div class="foot">
         <footer><p>Copyright Leebartea © 2025</p></footer>
