--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     <hr>
     <div class="routes">
-        <div><a href="../public/RoadMap.html">HTML ROUTE</a></div>
+        <div><a href="./public/RoadMap.html">HTML ROUTE</a></div>
         <div><a href="../public/css.html">CSS ROUTE</a></div>
        <div> <a href="../public/js.html">JAVASCRIPT ROUTE</a></div>
     </div>
